[gd_scene load_steps=8 format=2]

[ext_resource path="res://Tiles/tutorial/fase2.png" type="Texture" id=1]
[ext_resource path="res://Tiles/tutorial/introButton.png" type="Texture" id=2]
[ext_resource path="res://Tiles/tutorial/fase3.png" type="Texture" id=3]
[ext_resource path="res://Tiles/tutorial/fase1.png" type="Texture" id=4]
[ext_resource path="res://Tiles/tutorial/Cards - Game.png" type="Texture" id=5]
[ext_resource path="res://World/Tutorial/Abertura.gd" type="Script" id=6]
[ext_resource path="res://Tiles/tutorial/backButton.png" type="Texture" id=7]

[node name="Abertura" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 370.0
margin_bottom = 225.0
color = Color( 0.780392, 0.764706, 0.882353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="Button" type="Button" parent="CanvasLayer"]
margin_left = 138.0
margin_top = 80.0
margin_right = 192.0
margin_bottom = 102.0
rect_scale = Vector2( 2, 2 )
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="CanvasLayer"]
margin_left = 138.0
margin_top = 46.0
margin_right = 192.0
margin_bottom = 68.0
rect_scale = Vector2( 2, 2 )
icon = ExtResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="CanvasLayer"]
margin_left = 137.0
margin_top = 149.0
margin_right = 191.0
margin_bottom = 171.0
rect_scale = Vector2( 2, 2 )
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="CanvasLayer"]
margin_left = 137.0
margin_top = 115.0
margin_right = 191.0
margin_bottom = 137.0
rect_scale = Vector2( 2, 2 )
icon = ExtResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="CanvasLayer"]
margin_left = 12.0
margin_top = 14.0
margin_right = 66.0
margin_bottom = 36.0
rect_scale = Vector2( 2, 2 )
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cards-Game" type="Sprite" parent="."]
position = Vector2( 186, 173 )
scale = Vector2( 0.975926, 0.698148 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="CanvasLayer/Button" to="CanvasLayer" method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button2" to="CanvasLayer" method="_on_Button2_pressed"]
[connection signal="pressed" from="CanvasLayer/Button3" to="CanvasLayer" method="_on_Button3_pressed"]
[connection signal="pressed" from="CanvasLayer/Button4" to="CanvasLayer" method="_on_Button4_pressed"]
[connection signal="pressed" from="CanvasLayer/Button5" to="CanvasLayer" method="_on_Button5_pressed"]
